# milk

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  bite.h  bite_iterator.h  cppdep_config.yml  grain.h  milk-config.cmake  milk.h  milk_test.cpp
dev_tests/bson/: CMakeLists.txt  bson.cpp
dev_tests/dev/: CMakeLists.txt  milk_dev.cpp
dev_tests/installed/: CMakeLists.txt
dev_tests/msgpack/: CMakeLists.txt
doc/: common_methods.txt  common_types.txt  serialization_supported_types.txt
milk/: binary_proxy.h  bite.cpp  bite.h  bite_iterator.cpp  bite_iterator.h  bite_member_proxy.cpp  bite_member_proxy.h  grain.cpp  grain.h  iterator_value.cpp  iterator_value.h  types.h
milk/modules/: bson.h  msgpack.h
tests/bson/: CMakeLists.txt  CMakeSettings.json  bson.cpp
tests/dev/: milk_dev.cpp
tests/install/: installed.cpp
tests/installed/: CMakeLists.txt
tests/interface/: CMakeLists.txt  interface.cpp
tests/milk/: CMakeLists.txt  milk.cpp
tests/milk_dev/: CMakeLists.txt  milk_dev.cpp
tests/msgpack/: CMakeLists.txt  msgpack.cpp
